fix: resolve layout overflow and constrain hero image within viewport

--- a/style.css
+++ b/style.css
@@ -1,7 +1,37 @@
+* {
+    margin: 0;
+    outline: 1px solid red;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+
 .content {
     background-image: url('images/bg-pattern-desktop.svg');
-    background-repeat: no-repeat;
-    background-position: center;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    height: 100vh;
+}
+
+.content img {
+    width: 150px;
+    height: auto;
+}
+
+.image {
+    height: 100vh;
+}
+
+.image img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+    display: block;
 }
 
 .error-message, 
